# Hangar

./: .gitignore  CONTRIBUTING.md  NOTICE.TXT  README.md  hangar_init.py  mypy.ini  pyproject.toml  ruff.toml
hangar_sdk/core/: __init__.py  utils.py
hangar_sdk/core/blocks/: aws_blocks.py
hangar_sdk/core/rbac/aws/: base_type.py  pyproject.toml  service_roles.py  statement.py  test.py
hangar_sdk/core/terraform/: __init__.py  buffer.py  credentials.py  provider_blocks.py
hangar_sdk/resources/terraform/: __init__.py
hangar_sdk/resources/terraform/aws/: __init__.py  aws_acm_certificate.py  aws_acm_certificate_validation.py  aws_alb.py  aws_alb_listener.py  aws_alb_listener_certificate.py  aws_alb_listener_rule.py  aws_alb_target_group.py  aws_alb_target_group_attachment.py  aws_ami.py  aws_ami_copy.py  aws_ami_from_instance.py  aws_ami_launch_permission.py  aws_api_gateway_vpc_link.py  aws_apigatewayv2_route_response.py  aws_apigatewayv2_vpc_link.py  aws_appautoscaling_policy.py  aws_appautoscaling_scheduled_action.py  aws_appautoscaling_target.py  aws_apprunner_auto_scaling_configuration_version.py  aws_apprunner_connection.py  aws_apprunner_deployment.py  (+671 more)
hangar_sdk/serverless/: __init__.py  compat.py  packager.py  utils.py
tests/test_blocks/: test_ecs.py  test_instance.py  test_lambda.py  test_s3.py
tests/test_blocks/lambda_function/: lambda_handler.py
tests/test_buffers/terraform/: test_flush.py  test_write.py
tests/test_fastapi/: pyproject.toml  requirements.txt  test_lambda.py
tests/test_lambda/: pyproject.toml  requirements.txt  test_lambda.py
(+393 files in other folders)
